@@ -42,6 +42,9 @@ RELEASE 0.03 -
 
   - Put the Action factory and classes into their own module.
 
+  - Use one CPlusPlusAction in the Object Builder's action dictionary,
+    instead of letting it create multiple identical instances.
+
   From Anthony Roach:
 
   - Add a "duplicate" keyword argument to BuildDir() that can be set
